--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "arql-ops": "https://kybjhezuyftg.arweave.net/ITTPLYoxidZzAJP50FQ03QJUSkkh9iKHcmMcLZOvqtQ",
     "arweave": "^1.7.1",
     "bootstrap-vue": "^2.0.4",
+    "chart.js": "^2.9.3",
     "coingecko-api": "^1.0.10",
     "flatpickr": "^4.5.1",
     "moment": "^2.27.0",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
+    "vue-chartjs": "^3.5.0",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "node-sass": "^4.11.0",
