--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.4",
     "chart.js": "^2.9.3",
     "coingecko-api": "^1.0.10",
+    "crypto-js": "^4.0.0",
     "flatpickr": "^4.5.1",
     "moment": "^2.27.0",
     "nouislider": "^11.1.0",
