--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.9.3",
     "coingecko-api": "^1.0.10",
     "crypto-js": "^4.0.0",
+    "etherscan-api": "^10.0.5",
     "flatpickr": "^4.5.1",
     "moment": "^2.27.0",
     "nouislider": "^11.1.0",
@@ -22,6 +23,7 @@
     "vue-chartjs": "^3.5.0",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
+    "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3"
