--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "cli-progress": "^3.8.2",
     "coingecko-api": "^1.0.10",
     "crypto-js": "^4.0.0",
+    "emotion": "^9.2.6",
     "etherscan-api": "^10.0.5",
     "flatpickr": "^4.5.1",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^1.9.1",
     "moment": "^2.27.0",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.5.0",
+    "vue-emotion": "^0.4.2",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-moment": "^4.1.0",
