--- a/package.json
+++ b/package.json
@@ -25,21 +25,26 @@
     "moment": "^2.27.0",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
+    "smartweave": "^0.4.9",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.5.0",
+    "vue-code-highlight": "^0.7.6",
     "vue-emotion": "^0.4.2",
     "vue-flatpickr-component": "^8.1.1",
+    "vue-highlightjs": "^1.3.3",
     "vue-lazyload": "^1.2.6",
     "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3",
+    "vuecode.js": "0.0.27",
     "web3": "^1.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "chai": "^4.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
