--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
