--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@grapecity/wijmo.vue2.all": "^5.20203.748",
-    "@limestonefi/api": "0.1.1",
+    "@limestonefi/api": "0.1.2",
     "@saeris/vue-spinners": "^1.0.8",
+    "ar-gql": "0.0.3",
     "arql-ops": "https://kybjhezuyftg.arweave.net/ITTPLYoxidZzAJP50FQ03QJUSkkh9iKHcmMcLZOvqtQ",
     "arweave": "^1.9.1",
     "bootstrap-vue": "^2.0.4",
