Small fix + better logging

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.9.3",
     "cli-progress": "^3.8.2",
     "coingecko-api": "^1.0.10",
+    "console-stamp": "^0.2.9",
     "crypto-js": "^4.0.0",
     "emotion": "^9.2.6",
     "etherscan-api": "^10.0.5",
